--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -36,7 +36,6 @@
 }
 
 .hero-text {
-    @apply overflow-x-hidden;
     text-shadow: 0rem 0rem 1rem rgb(255 255 255 / 48%);
 }
 
